<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView android:id="@+id/editProfile_picture"
               android:layout_marginTop="4dp"
               android:layout_marginRight="4dp"
               android:layout_marginLeft="4dp"
               android:layout_width="150dp"
               android:layout_height="160dp"
               android:src="@drawable/default_profile_pic"/>

    <EditText android:id="@+id/editProfile_firstName_label"
              android:layout_marginTop="4dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_toRightOf="@id/editProfile_picture"
              android:hint="@string/firstname_edtext"/>

    <EditText android:id="@+id/editProfile_lastName_label"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@id/editProfile_firstName_label"
              android:layout_toRightOf="@id/editProfile_picture"
              android:hint="@string/lastname_edtext"/>

    <EditText android:id="@+id/editProfile_specialisation_label"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@id/editProfile_lastName_label"
              android:layout_toRightOf="@id/editProfile_picture"
              android:hint="Specialisation"/>

    <EditText android:id="@+id/editProfile_email_label"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@id/editProfile_specialisation_label"
              android:layout_toRightOf="@id/editProfile_picture"
              android:hint="@string/email_edtext"/>

    <EditText android:id="@+id/editProfile_phoneNumber_label"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@id/editProfile_email_label"
              android:layout_toRightOf="@id/editProfile_picture"
              android:hint="tel"/>

    <EditText android:id="@+id/editProfile_adress_label"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@id/editProfile_phoneNumber_label"
              android:layout_toRightOf="@id/editProfile_picture"
              android:hint="adress"/>

    <Button android:id="@+id/recordRequest_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editProfile_adress_label"
            android:text="Save"/>

</RelativeLayout>